--- a/styles.css
+++ b/styles.css
@@ -273,9 +273,9 @@ body {
 /* 3D Spinning Asset */
 .spinning-3d {
     position: absolute;
-    top: 50%;
+    top: calc(100vh - 200px);
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
     z-index: 100;
     width: 300px;
     height: 300px;
