Revert 3D asset back to center position
- Restore original centered positioning
- Change back to top: 50% and left: 50%
- Restore full transform: translate(-50%, -50%)
- Return 3D asset to center of screen

--- a/styles.css
+++ b/styles.css
@@ -273,9 +273,9 @@ body {
 /* 3D Spinning Asset */
 .spinning-3d {
     position: absolute;
-    top: calc(100vh - 200px);
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
     z-index: 100;
     width: 300px;
     height: 300px;
